--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               upfiles
-version:            7
+version:            8
 abstract:           Upload files to a remote FTP server.
 author:
     - Kevin Ryde <user42@zip.com.au>
@@ -11,13 +11,15 @@ configure_requires:
 build_requires:
     ExtUtils::MakeMaker:  0
 requires:
-    DBD::SQLite:         0
-    DBI:                 0
-    File::HomeDir:       0
-    Locale::TextDomain:  0
-    Math::Round:         0
-    perl:                5.010
-    URI:                 0
+    DBD::SQLite:          0
+    DBI:                  0
+    File::HomeDir:        0
+    Locale::TextDomain:   0
+    Math::Round:          0
+    perl:                 5.010
+    Regexp::Common:       0
+    Regexp::Common::Emacs:  0
+    URI:                  0
 resources:
     homepage:  http://user42.tuxfamily.org/upfiles/index.html
     license:   http://www.gnu.org/licenses/gpl.html
@@ -25,8 +27,6 @@ no_index:
     directory:
         - t
         - inc
-        - devel
-        - xt
         - devel
 generated_by:       ExtUtils::MakeMaker version 6.57_05
 meta-spec:
