--- a/debian/control
+++ b/debian/control
@@ -31,7 +31,7 @@ Bugs: mailto:user42@zip.com.au
 
 Package: upfiles
 Architecture: all
-Depends: perl (>= 5.10), libdbd-sqlite3-perl, libfile-homedir-perl, libintl-perl, libmath-round-perl, liburi-perl, ${perl:Depends}, ${misc:Depends}
+Depends: perl (>= 5.10), libdbd-sqlite3-perl, libfile-homedir-perl, libintl-perl, libmath-round-perl,  libregexp-common-perl, libregexp-common-other-perl, liburi-perl, ${perl:Depends}, ${misc:Depends}
 Suggests: libintl-xs-perl
 Description: Upload files to an FTP server
  Upload changed files from your local disk to an FTP server, as a
