--- a/devel/proftpd-anon.conf
+++ b/devel/proftpd-anon.conf
@@ -1,6 +1,4 @@
-# -*- mode: cperl -*-
-
-# Copyright 2012, 2014 Kevin Ryde
+# Copyright 2014 Kevin Ryde
 
 # This file is part of Upfiles.
 #
@@ -17,15 +15,28 @@
 # You should have received a copy of the GNU General Public License along
 # with Upfiles.  If not, see <http://www.gnu.org/licenses/>.
 
-use FindBin;
-my $dir = $FindBin::Bin;
+DefaultAddress    localhost
+SocketBindTight   on
+UseIPv6           off
 
-upfiles
-  (local  => '/tmp/upf',
-   remote => 'ftp://localhost/pub/upf/a/b/c/d',
-   exclude_regexps => [ qr{/debian/(conf|db)},
-                      ],
-   throttle => { bits_per_second => 15000,
-                 blocksize => 8192 },
-   # copy_utime => 1,
-  );
+<Anonymous ~ftp>
+  User		    ftp
+  Group		    nogroup
+  UserAlias	    anonymous ftp
+  DirFakeUser	    on
+  DirFakeGroup      on
+  RequireValidShell off
+
+  <Directory pub>
+    AllowAll
+    # <Limit READ WRITE MKD>
+    # </Limit>
+    # <Limit STOR>
+    #   AllowAll
+    # </Limit>
+    # <Limit SITE_UTIME>
+    #   AllowAll
+    # </Limit>
+  </Directory>
+
+</Anonymous>
