--- a/debian/rules
+++ b/debian/rules
@@ -1,6 +1,6 @@
 #!/usr/bin/make -f
 
-# Copyright 2008, 2009 Kevin Ryde
+# Copyright 2008, 2009, 2014 Kevin Ryde
 
 # This file is part of Upfiles.
 #
@@ -19,7 +19,7 @@
 
 
 include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/class/perlmodule.mk
+include /usr/share/cdbs/1/class/perl-makemaker.mk
 
 # "upfiles.1" instead of makemaker default "upfiles.1p"
 DEB_MAKEMAKER_USER_FLAGS = MAN1EXT=1
